...
                    android:text="@={profileDisplayViewmodel.userID}"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView_profile_display_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="@={profileDisplayViewmodel.userDesc}"
...
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/button_profile_display_fragment_edit_profile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="2dp"
                        android:layout_marginEnd="2dp"
                        android:padding="10dp"
                        android:text="@string/profile_display_edit_profile_button" />
...
